--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,9 @@ and open the template in the editor.
     Created on : Jan 20, 2016, 1:23:28 PM
     Author     : Elena
 */
+a{
+    text-decoration: none;
+}
 
 a img:hover{
     opacity: 0;
@@ -48,6 +51,12 @@ h1{
     text-align: center;
 }
 
+h2{
+    color:black;
+    font-size:3vw;
+    text-align: center;
+}
+
 h3{
    background: black;
    color:white;
@@ -74,6 +83,7 @@ h6{
     padding-bottom:0;
     text-align:center;
 }
+
 
 img{
     display:block;
@@ -105,4 +115,9 @@ li a:hover{
 
 #navbar ul{
     width:100%;
+}
+
+.whiteBox{
+    background: white;
+    padding:2vw;
 }
